<resources>
    <string name="app_name">Control</string>
    <string name="btnHigienico">Higienico</string>
    <string name="btnActividad">Actividad Fisica</string>
    <string name="btnDieta">Dieta</string>
    <string name="btnHobbies">Hobbies</string>
    <string name="btnHistorial">Historial</string>
    <string name="btnDesafio">Desafio</string>
    <string name="menu">Menu</string>
    <string name="tempoDu">15:00</string>
    <string name="tempoDi">03:00</string>
    <string name="tempoPerso">00:00</string>
    <string name="comenzar">Comenzar</string>
    <string name="pausa">Pausa</string>
    <string name="dientes">Dientes</string>
    <string name="ducha">Ducha</string>
    <string name="detener_alarma">Detener Alarma</string>
    <string name="temporizadores">Temporizadores</string>
    <string name="nombre">Nombre</string>
    <string name="tiempo">Tiempo</string>
    <string name="acciones">Acciones</string>
    <string name="crear_tempo">Crear Nuevo</string>
    <string name="cNombre">Nombre del temporizador</string>
    <string name="cTiempo">Tiempo (MM:SS)</string>
    <string name="guardar">Guardar Temporizador</string>
    <string name="tempo">Temporizador</string>
    <string name="ms">MM:SS</string>
    <string name="aceptar">Aceptar</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="advertencia">SOLO SE GUARDAN LAS ÚLTIMAS 4 SEMANAS</string>
    <string name="semana1">Semana 1</string>
    <string name="semana2">Semana 2</string>
    <string name="semana3">Semana 3</string>
    <string name="semana4">Semana 4</string>
    <string name="reto">Desafíate a ti mismo y Mejora tus tiempos de Actividad Física de la semana pasada</string>
    <string name="ver">Ver</string>
    <string name="superar">¡Superate!</string>
    <string name="hora">Ingresa Hora en ciclo 24:00</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="borrar">Borrar</string>
    <string name="mensaje">Debe ingresar el tiempo en minutos y segundos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>