<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/temporizadores"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tableLayout_temporizadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:stretchColumns="1">

        <!-- Cabecera de la tabla -->
        <TableRow>

            <TextView
                android:layout_width="154dp"
                android:padding="8dp"
                android:text="@string/nombre"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100dp"
                android:padding="8dp"
                android:text="@string/tiempo"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- Se ajusta el ancho para que quepan los dos botones -->
            <TextView
                android:layout_width="113dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/acciones"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </TableRow>

        <!-- Las filas dinámicas de la tabla se generarán en el código Java -->

    </TableLayout>
</LinearLayout>
