<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Campo para el nombre del temporizador -->
    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cNombre"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <!-- Campo para el tiempo en formato MM:SS -->
    <EditText
        android:id="@+id/et_tiempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789:"
        android:hint="@string/cTiempo"
        android:inputType="text"
        android:maxLength="5"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <!-- Botón para guardar el temporizador -->
    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar" />
</LinearLayout>
