<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editarDietaLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".editarDietaFragment">

    <!-- EditText para editar el nombre -->
    <TextView
        android:id="@+id/tvEditarNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/nombre"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/etEditarNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <!-- EditText para editar la hora -->
    <TextView
        android:id="@+id/tvEditarHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/hora"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etEditarHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="5"
        android:maxLength="5"
        android:inputType="time"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <!-- Botón Aceptar -->
    <Button
        android:id="@+id/btnAceptarEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:textSize="34sp" />

    <!-- Botón Borrar -->
    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/borrar"
        android:textSize="34sp" />
</LinearLayout>
