<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCrearActividad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".crearActividadFragment">

    <TextView
        android:id="@+id/textViewTituloActividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/nombre"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/editTextActividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textViewTiempoActividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/cTiempo"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextTiempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="time"
        android:maxLength="5"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <Button
        android:id="@+id/btnAceptarActividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:textSize="34sp" />
</LinearLayout>
