<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".tempoDucha">

    <TextView
        android:id="@+id/Ducha"
        android:layout_width="189dp"
        android:layout_height="83dp"
        android:layout_marginTop="88dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:drawableTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:text="@string/ducha"
        android:textColor="@color/light_blue"
        android:textSize="48sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_timer"
        android:layout_width="286dp"
        android:layout_height="158dp"
        android:layout_marginTop="224dp"
        android:text="@string/tempoDu"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="96sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="187dp"
        android:layout_height="112dp"
        android:layout_marginTop="148dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/comenzar"
        android:textColor="@color/white"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_timer" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="97dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="volver"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
